added reviews to user-profile and property component

--- a/frontend/src/assets/i18n/ba.json
+++ b/frontend/src/assets/i18n/ba.json
@@ -50,5 +50,7 @@
   "nights": "noći",
   "totalPrice": "Ukupna cijena",
   "reserve": "Rezerviši",
-  "rating": "Ocjena"
+  "rating": "Ocjena",
+  "reviews" : "Recenzije",
+  "averageRating": "Prosječna ocjena"
 }
