--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -50,5 +50,7 @@
   "nights": "Nächte",
   "totalPrice": "Gesamtpreis",
   "reserve": "Reservieren",
-  "rating": "Bewertung"
+  "rating": "Bewertung",
+  "reviews": "Bewertungen",
+  "averageRating": "Durchschnittliche Bewertung"
 }
