added image carousel to the property component

--- a/frontend/src/assets/i18n/ba.json
+++ b/frontend/src/assets/i18n/ba.json
@@ -52,5 +52,6 @@
   "reserve": "Rezerviši",
   "rating": "Ocjena",
   "reviews" : "Recenzije",
-  "averageRating": "Prosječna ocjena"
+  "averageRating": "Prosječna ocjena",
+  "numberOfReviews": "Broj recenzija"
 }
