--- a/frontend/src/assets/i18n/fr.json
+++ b/frontend/src/assets/i18n/fr.json
@@ -52,5 +52,6 @@
   "reserve": "Réserver",
   "rating": "Note",
   "reviews": "Avis",
-  "averageRating": "Note moyenne"
+  "averageRating": "Note moyenne",
+  "numberOfReviews": "Nombre d'avis"
 }
