--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -52,5 +52,6 @@
   "reserve": "Reservieren",
   "rating": "Bewertung",
   "reviews": "Bewertungen",
-  "averageRating": "Durchschnittliche Bewertung"
+  "averageRating": "Durchschnittliche Bewertung",
+  "numberOfReviews": "Anzahl der Bewertungen"
 }
