--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -53,5 +53,8 @@
   "rating": "Bewertung",
   "reviews": "Bewertungen",
   "averageRating": "Durchschnittliche Bewertung",
-  "numberOfReviews": "Anzahl der Bewertungen"
+  "numberOfReviews": "Anzahl der Bewertungen",
+  "newPassword": "Neues Passwort",
+  "confirmPassword": "Passwort bestätigen",
+  "changesSuccessful": "Änderungen erfolgreich gespeichert"
 }
