--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -57,5 +57,7 @@
   "newPassword": "Neues Passwort",
   "confirmPassword": "Passwort bestätigen",
   "changesSuccessful": "Änderungen erfolgreich gespeichert",
-  "registrationSuccessful": "Registrierung erfolgreich"
+  "registrationSuccessful": "Registrierung erfolgreich",
+  "noReviews": "Sie haben keine Bewertungen",
+  "noReservations": "Sie haben keine Reservierungen"
 }
