--- a/frontend/src/assets/i18n/ba.json
+++ b/frontend/src/assets/i18n/ba.json
@@ -59,5 +59,6 @@
   "changesSuccessful": "Promjene su uspješno sačuvane",
   "registrationSuccessful": "Registracija uspješna",
   "noReviews": "Nemate recenzija",
-  "noReservations": "Nemate rezervacija"
+  "noReservations": "Nemate rezervacija",
+  "login": "Prijavi se"
 }
