--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -59,5 +59,6 @@
   "changesSuccessful": "Änderungen erfolgreich gespeichert",
   "registrationSuccessful": "Registrierung erfolgreich",
   "noReviews": "Sie haben keine Bewertungen",
-  "noReservations": "Sie haben keine Reservierungen"
+  "noReservations": "Sie haben keine Reservierungen",
+  "login": "Anmeldung"
 }
