added dark theme

--- a/frontend/src/assets/i18n/ba.json
+++ b/frontend/src/assets/i18n/ba.json
@@ -61,5 +61,6 @@
   "noReviews": "Nemate recenzija",
   "noReservations": "Nemate rezervacija",
   "login": "Prijavi se",
-  "thereAreNoReviews" : "Nema recenzija"
+  "thereAreNoReviews" : "Nema recenzija",
+  "passwordsDontMatch":"Lozinke se ne podudaraju. Molimo osigurajte da obje lozinke budu iste."
 }
