--- a/frontend/src/assets/i18n/fr.json
+++ b/frontend/src/assets/i18n/fr.json
@@ -61,5 +61,6 @@
   "noReviews": "Vous n'avez pas d'avis",
   "noReservations": "Vous n'avez pas de réservations",
   "login": "Connecter",
-  "thereAreNoReviews": "Il n'y a pas d'avis"
+  "thereAreNoReviews": "Il n'y a pas d'avis",
+  "passwordsDontMatch":"Les mots de passe ne correspondent pas. Veuillez vous assurer que les deux mots de passe sont identiques."
 }
