--- a/frontend/src/assets/i18n/ba.json
+++ b/frontend/src/assets/i18n/ba.json
@@ -24,6 +24,7 @@
   "backToHome": "Nazad na početnu stranicu",
   "myReservations": "Moje rezervacije",
   "myReviews": "Moje recenzije",
+  "reviews": "Recenzije",
   "editProfile": "Uredi profil",
   "logOut": "Odjava",
   "fullName": "Ime i prezime",
