--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -24,6 +24,7 @@
   "backToHome": "Zurück zur Startseite",
   "myReservations": "Meine Reservierungen",
   "myReviews": "Meine Bewertungen",
+  "reviews" : "Bewertungen",
   "editProfile": "Profil bearbeiten",
   "logOut": "Abmelden",
   "fullName": "Vollständiger Name",
