--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -24,6 +24,7 @@
   "backToHome": "Back to home page",
   "myReservations": "My reservations",
   "myReviews": "My reviews",
+  "reviews": "Reviews",
   "editProfile": "Edit profile",
   "logOut": "Log out",
   "fullName": "Full name",
