--- a/frontend/src/assets/i18n/fr.json
+++ b/frontend/src/assets/i18n/fr.json
@@ -24,6 +24,7 @@
   "backToHome": "Retour à la page d'accueil",
   "myReservations": "Mes réservations",
   "myReviews": "Mes avis",
+  "reviews": "Les avis",
   "editProfile": "Modifier le profil",
   "logOut": "Déconnexion",
   "fullName": "Nom complet",
