--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -63,5 +63,6 @@
   "noReservations": "Sie haben keine Reservierungen",
   "login": "Anmeldung",
   "thereAreNoReviews": "Es gibt keine Bewertungen",
-  "passwordsDontMatch":"Die Passwörter stimmen nicht überein. Bitte stellen Sie sicher, dass beide Passwörter übereinstimmen."
+  "passwordsDontMatch":"Die Passwörter stimmen nicht überein. Bitte stellen Sie sicher, dass beide Passwörter übereinstimmen.",
+  "amenities": "Annehmlichkeiten"
 }
