--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -62,5 +62,6 @@
   "noReviews": "You have no reviews",
   "noReservations": "You have no reservations",
   "thereAreNoReviews" : "There are no reviews",
-  "passwordsDontMatch": "The passwords do not match. Please ensure both passwords are the same."
+  "passwordsDontMatch": "The passwords do not match. Please ensure both passwords are the same.",
+  "amenities": "Amenities"
 }
